[gd_scene load_steps=8 format=3 uid="uid://dnl58hkj3wo1d"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_tvu83"]
[ext_resource type="Script" path="res://scripts/menu_item.gd" id="2_81w3j"]
[ext_resource type="Texture2D" uid="uid://b2nanxuajo0mq" path="res://assets/background_dummy.png" id="2_mtjmp"]
[ext_resource type="LabelSettings" uid="uid://conwdpenxmpc3" path="res://assets/label_settings/menu_item.tres" id="3_p483l"]

[sub_resource type="LabelSettings" id="LabelSettings_blv0q"]
font_size = 51
outline_size = 11
outline_color = Color(0, 0, 0, 1)
shadow_size = 12
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 1)

[sub_resource type="LabelSettings" id="LabelSettings_a6ukw"]
font_size = 32
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 1)

[sub_resource type="LabelSettings" id="LabelSettings_03i3h"]
font_size = 32
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 1)

[node name="Menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_tvu83")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mtjmp")

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -575.0
offset_top = 105.0
offset_right = 576.0
offset_bottom = 248.0
grow_horizontal = 2
text = "Sarntal Super Swirl
Prototype"
label_settings = SubResource("LabelSettings_blv0q")
horizontal_alignment = 1

[node name="Start" type="Label" parent="."]
offset_left = 57.0
offset_top = 457.0
offset_right = 169.0
offset_bottom = 502.0
pivot_offset = Vector2(0, 21)
mouse_filter = 0
text = "Start"
label_settings = ExtResource("3_p483l")
vertical_alignment = 1
script = ExtResource("2_81w3j")

[node name="Exit" type="Label" parent="."]
offset_left = 57.0
offset_top = 561.0
offset_right = 169.0
offset_bottom = 606.0
pivot_offset = Vector2(0, 21)
mouse_filter = 0
text = "Exit
"
label_settings = SubResource("LabelSettings_a6ukw")
vertical_alignment = 1
script = ExtResource("2_81w3j")

[node name="Level" type="Label" parent="."]
offset_left = 57.0
offset_top = 508.0
offset_right = 169.0
offset_bottom = 553.0
pivot_offset = Vector2(0, 21)
mouse_filter = 0
text = "Levels
"
label_settings = SubResource("LabelSettings_03i3h")
vertical_alignment = 1
script = ExtResource("2_81w3j")

[connection signal="gui_input" from="Start" to="." method="start_gui_event"]
[connection signal="mouse_entered" from="Start" to="Start" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Start" to="Start" method="_on_mouse_exited"]
[connection signal="gui_input" from="Exit" to="." method="exit_gui_event"]
[connection signal="mouse_entered" from="Exit" to="Exit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Exit" to="Exit" method="_on_mouse_exited"]
[connection signal="gui_input" from="Level" to="." method="level_gui"]
[connection signal="mouse_entered" from="Level" to="Level" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Level" to="Level" method="_on_mouse_exited"]
